[Refactoring] - Server endpoints renaming
